-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0 Beta1
-
None
-
-
8f1d8139c40d8b050ac606c3d62eee7f1f37410f, ee25bde3e (dev), 93f8c8f3e (6.7)
Declarative apps such as qml-gallery appear black on my Android 13 phone.
On Android 10 tablet, they work as expected.
This is a regression.
- relates to
-
QTBUG-108776 Qt Quick 2 Surface Example does not work in WebAssembly builds
-
- Closed
-
For Gerrit Dashboard: QTBUG-110686 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
460019,9 | wasm: make opengles3 (webgl2) default surface format | dev | qt/qtbase | Status: MERGED | +2 | 0 |
541783,2 | wasm: make opengles3 (webgl2) default surface format | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |