wasm: make opengles3 (webgl2) default surface format

All major browsers support webgl2 out of the box.
[ChangeLog][WebAssmebly] Default OpenGL ES version raised to 3.0

Fixes: QTBUG-110686
Change-Id: I875b55c2e0f6e955249f121d92214cf10ed416d7
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit ee25bde3edf08e27efbb9619683ffb5517115817)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>